--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon src/server.ts",
     "build": "tsc",
-    "start": "tsc && node dist/server.js"
+    "start": "tsc && node src/server.js"
   },
   "keywords": [],
   "author": "",
